--- a/scss/Why CODEPRIDE.scss
+++ b/scss/Why CODEPRIDE.scss
@@ -347,3 +347,248 @@ body {
         }
     }
 }
+
+@media screen and (max-width: 1727px) and (min-width: 1281px) {
+    body {
+        .wrapper {
+            .header {
+                padding: 23px 31px;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 0px;
+                    &__title {
+                        width: 60%;
+                    }
+                    &__sub-title {
+                        width: 57%;
+                    }
+                }
+                .section2 {
+                    &-container2 {
+                        &__textbox {
+                            &-title {
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 240px 31px;
+                    &-container {
+                        align-items: flex-start;
+                    }
+                }
+                .section4 {
+                    padding: 0px;
+                }
+                .section5 {
+                    padding: 80px 0px;
+                    &__text {
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                padding: 500px 31px 80px;
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 1280px) and (min-width: 834px) {
+    body {
+        .wrapper {
+            .header {
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 0px;
+                    &__sub-title {
+                        width: 89%;
+                    }
+                    &-container {
+                        display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                    }
+                }
+                .section2 {
+                    &-container {
+                        padding: 0px;
+                        gap: 32px;
+                    }
+                    &-box {
+                        &__text {
+                            font-size: 19px;
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 240px 0px;
+                    &__sub-title {
+                        width: 69%;
+                    }
+                    &__text {
+                        width: 77%;
+                    }
+                }
+                .section4 {
+                    padding: 0px;
+                }
+
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 40px;
+                    &__text {
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                &-container {
+                    flex-direction: column;
+                    gap: 80px;
+                }
+                &-contentbox2 {
+                    gap: 254px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 834px) and (min-width: 376px) {
+    body {
+        .wrapper {
+            .header {
+                gap: 139px;
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 0px;
+                    &__title {
+                        font-size: 32px;
+                        width: 100%;
+                    }
+                    &__sub-title {
+                        font-size: 20px;
+                        width: 100%;
+                    }
+                    &-container {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+                .section2 {
+                    &__text {
+                        font-size: 16px;
+                    }
+                    &__title {
+                        font-size: 32px;
+                        width: 100%;
+                    }
+                    &-container {
+                        padding: 16px;
+                        flex-direction: column;
+                    }
+                    &-box {
+                        width: 100%;
+                        &__title {
+                            font-size: 28px;
+                        }
+                        &__text {
+                            font-size: 20px;
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 240px 16px;
+                    &__sub-title {
+                        font-size: 22px;
+                        width: 100%;
+                    }
+                    &__title {
+                        font-size: 32px;
+                    }
+                    &__text {
+                        width: 100%;
+                    }
+                    &-container {
+                        flex-direction: column;
+                    }
+                    &-contant--margin {
+                        margin-top: 0px;
+                    }
+                    &-box {
+                        gap: 50px;
+                    }
+                    &-contant {
+                        &__number {
+                            display: none;
+                        }
+                    }
+                }
+                .section4 {
+                    padding: 0px;
+                    &__title {
+                        font-size: 32px;
+                    }
+                    &-container {
+                        flex-direction: column;
+                    }
+                }
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 0px;
+                    &__title {
+                        font-size: 32px;
+                    }
+                    &__text {
+                        font-size: 25px;
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                padding: 500px 0px 80px;
+                &-container {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox2 {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+            }
+        }
+    }
+}
