--- a/scss/about us.scss
+++ b/scss/about us.scss
@@ -88,6 +88,33 @@ body {
                     }
                 }
             }
+            .section3 {
+                @include flex(flex-start, center, 24px);
+                flex-direction: column;
+                padding: 120px 100px;
+                &__sub-title {
+                    @include Ubuntu(28px, 500, 140%);
+                }
+                &__title {
+                    @include Ubuntu(56px, 500, normal);
+                    text-align: center;
+                    width: 90%;
+                }
+                &__title-text {
+                    color: $Purple;
+                }
+                &-container {
+                    margin-top: 50px;
+                    @include flex(flex-start, center, 0px);
+                    &__text {
+                        @include Ubuntu(24px, 300, 160%);
+                    }
+                    &__img {
+                        width: 54%;
+                    }
+                }
+            }
+            
         }
     }
 }
