--- a/scss/about us.scss
+++ b/scss/about us.scss
@@ -114,7 +114,157 @@ body {
                     }
                 }
             }
-            
+            .section4 {
+                margin-bottom: 120px;
+                @include flex(flex-start, center, 240px);
+                flex-direction: column;
+                &-container {
+                    @include flex(center, center, 60px);
+                    flex-direction: column;
+                }
+                &-textbox {
+                    @include flex(flex-start, center, 28px);
+                    flex-direction: column;
+                    &__title {
+                        @include Ubuntu(64px, 500, normal);
+                    }
+                    &__text {
+                        @include Ubuntu(32px, 300, normal);
+                        text-align: center;
+                        width: 60%;
+                    }
+                }
+                &-box {
+                    display: grid;
+                    grid-template-columns: repeat(3, 1fr);
+                    gap: 53px;
+                    &__contain {
+                        background-color: $White;
+                        border-radius: 44px;
+                        padding: 12px 30px;
+                        @include flex(center, center, 12px);
+                    }
+                }
+                &-box2 {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    gap: 30px;
+                    &__contain {
+                        @include flex(flex-start, flex-start, 32px);
+                        flex-direction: column;
+                        border-radius: 44px;
+                        border: 2px solid $Light-Purple;
+                        background: $White;
+                        padding: 32px;
+                        &-textbox {
+                            @include flex(flex-start, flex-start, 16px);
+                            flex-direction: column;
+                            &-title {
+                                @include Ubuntu(32px, 500, normal);
+                            }
+                            &-text {
+                                @include Ubuntu(24px, 300, normal);
+                                width: 83%;
+                            }
+                        }
+                    }
+                }
+            }
+            .section5 {
+                position: absolute;
+                @include flex(flex-start, center, 20px);
+                flex-direction: column;
+                margin: 120px 219px;
+                border-radius: 44px;
+                background-color: $HoverLight;
+                padding: 80px 44px;
+                &__sub-title {
+                    @include Ubuntu(28px, 300, normal);
+                    text-transform: uppercase;
+                }
+                &__title {
+                    @include Ubuntu(50px, 500, normal);
+                    text-align: center;
+                }
+                &__text {
+                    @include Ubuntu(32px, 300, normal);
+                    text-align: center;
+                    width: 63%;
+                }
+                &__btn {
+                    @include Inter(24px, 600, normal);
+                    padding: 24px 44px;
+                    color: $White;
+                }
+                z-index: 20;
+            }
+        }
+        .footer {
+            @include flex(flex-start, flex-start, 79px);
+            flex-direction: column;
+            background-color: $Black;
+            margin-top: 300px;
+            padding: 600px 43px 80px;
+    
+            &-container {
+                @include flex(flex-start, flex-start, 225px);
+            }
+            &-box {
+                @include flex(flex-start, flex-start, 32px);
+                flex-direction: column;
+                &__tell {
+                    @include Ubuntu(28px, 500, normal);
+                    color: $White;
+                }
+                &__email {
+                    @include Ubuntu(28px, 500, normal);
+                    color: $White;
+                }
+                &__city {
+                    @include Ubuntu(28px, 500, normal);
+                    color: $White;
+                }
+                &__social {
+                    @include flex(flex-start, flex-start, 28px);
+                }
+            }
+            &-box2 {
+                @include flex(flex-start, flex-start, 72px);
+                flex-direction: column;
+            }
+            &-contentbox {
+                @include flex(flex-start, flex-start, 160px);
+            }
+            &-textbox {
+                @include flex(flex-start, flex-start, 24px);
+                flex-direction: column;
+                &__title {
+                    @include Ubuntu(28px, 500, normal);
+                    color: $White;
+                }
+                &__contain {
+                    @include flex(flex-start, flex-start, 16px);
+                    flex-direction: column;
+                    &-text {
+                        @include Ubuntu(20px, 300, normal);
+                        color: $White;
+                    }
+                }
+            }
+            &-contentbox2 {
+                @include flex(flex-start, flex-start, 200px);
+            }
+            &-container2 {
+                @include flex(center, center, 10px);
+                padding: 32px 10px 10px 10px;
+                border-top: 1px solid $Gray;
+                width: 90%;
+                &__text {
+                    @include Ubuntu(20px, 300, normal);
+                    color: $White;
+                    text-align: center;
+                }
+            }
         }
     }
 }
