--- a/scss/about us.scss
+++ b/scss/about us.scss
@@ -390,6 +390,8 @@ body {
                     }
                 }
                 .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 40px;
                     &__text {
                         width: 100%;
                     }
@@ -405,3 +407,216 @@ body {
     
 }
 
+@media screen and (max-width: 834px) and (min-width: 376px) {
+    body {
+        .wrapper {
+            .header {
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 0px;
+                    &__img {
+                        width: 50%;
+                    }
+                    &-container {
+                        &__title {
+                            font-size: 44px;
+                        }
+                        &__text {
+                            width: 92%;
+                        }
+                    }
+                }
+                .section2 {
+                    padding: 100px 0px;
+                    &__title {
+                        font-size: 44px;
+                        width: 100%;
+                    }
+                    &-container {
+                        gap: 30px;
+                        &__img {
+                            width: 49%;
+                        }
+                        &__box {
+                            &-title {
+                                font-size: 32px;
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 120px 0px;
+                    &-container {
+                        flex-direction: column;
+                        &__text {
+                            font-size: 18px;
+                        }
+                    }
+                }
+                .section4 {
+                    &-textbox {
+                        &__text {
+                            width: 95%;
+                        }
+                    }
+                    &-box {
+                        grid-template-columns: repeat(2, 1fr);
+                    }
+                    &-box2 {
+                        gap: 20px;
+                        &__contain {
+                            &-textbox {
+                                &-text {
+                                    width: 98%;
+                                }
+                            }
+                        }
+                    }
+                }
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 29px;
+                    &__text {
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                &-container {
+                    flex-direction: column;
+                    gap: 80px;
+                }
+                &-contentbox2 {
+                    gap: 254px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 375px) {
+    body {
+        .wrapper {
+            .header {
+                &__btn {
+                    display: none;
+                }
+                .burger-menu {
+                    display: block;
+                }
+                .btn {
+                    display: none;
+                }
+            }
+            .nav {
+                display: none;
+            }
+            .main {
+                .section1 {
+                    padding: 100px 10px;
+                    flex-direction: column-reverse;
+                    &-container {
+                        &__title {
+                            font-size: 32px;
+                        }
+                    }
+                }
+                .section2 {
+                    padding: 100px 10px;
+                    &__title {
+                        font-size: 32px;
+                        width: 79%;
+                    }
+                    &-container {
+                        flex-direction: column;
+                        &__box {
+                            &-title {
+                                font-size: 24px;
+                            }
+                            &-text {
+                                font-size: 16px;
+                            }
+                        }
+                    }
+                }
+                .section3 {
+                    padding: 120px 0px;
+                    &__sub-title {
+                        font-size: 16px;
+                    }
+                    &__title {
+                        font-size: 32px;
+                        width: 100%;
+                    }
+                    &-container {
+                        flex-direction: column;
+                        gap: 32px;
+                        &__img {
+                            width: 100%;
+                        }
+                    }
+                }
+                .section4 {
+                    &-textbox {
+                        &__title {
+                            font-size: 32px;
+                        }
+                        &__text {
+                            width: 67%;
+                            font-size: 22px;
+                        }
+                    }
+                    &-box {
+                        display: flex;
+                        flex-wrap: wrap;
+                        justify-content: center;
+                    }
+                    &-box2 {
+                        display: flex;
+                        flex-wrap: wrap;
+                    }
+                }
+                .section5 {
+                    margin: 120px 0px;
+                    padding: 80px 0px;
+                    &__title {
+                        font-size: 32px;
+                    }
+                    &__text {
+                        font-size: 25px;
+                        width: 100%;
+                    }
+                }
+            }
+            .footer {
+                padding: 700px 0px 80px;
+                &-container {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+                &-contentbox2 {
+                    flex-direction: column;
+                    gap: 50px;
+                }
+            }
+        }
+    }
+}
